@@ -12,6 +12,7 @@
 ! Assembly changes:
 ===================
 ! Updating System.Drawing.Common version to 6.0.0. On non-Windows systems this might be a breaking change.
+  See the description of the DrawingModule.Initialize method for details.
 * Updating KGySoft.CoreLibraries version
 
 * KGySoft.Drawing namespace:
@@ -19,9 +20,12 @@
 * DrawingModule class: On non-Windows Systems the module initializer enables using System.Drawing types that depend
   on native GDI+ calls.
 
-* KGySoft.Drawing.Imaging namespace:
++ KGySoft.Drawing.Imaging namespace:
 ====================================
-* Palette class:
++ BitmapDataExtension class:
+  + New Clip overloads to be able to specify whether the underlying bitmap data should be diposed when the returned
+    instance is disposed.
++ Palette class:
   + New indexer (same as the GetColor method)
 + New GifEncoder class
 + New GifGraphicsDisposalMethod enum
